update doctor service to return Doctor list with new Doctor class updates